[tool.poetry]
name = "face-swapper"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
insightface = "^0.7.3"
onnxruntime = "^1.15.1"
llvmlite = "^0.40.1"
numba = "^0.57.1"
gfpgan = "^1.3.8"
requests = "^2.31.0"
opencv-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
